# whisper_streaming_web

./: README.md  pyproject.toml
src/whisper_streaming_custom/: backends.py  online_asr.py  whisper_online.py
src/whisper_streaming_web/: clargs.py  serve.py  whisper_fastapi_online_server.py
